# frost_news

./: .gitignore  Cargo.toml  build.rs
data/: com.example.frostnews.gschema.xml
resources/: resources.gresource.xml
resources/style/: style.css
resources/ui/: frostnews.ui  newspage.ui  page_template.ui  search_page.ui  settings_page.ui
resources/ui/category_pages/: businessnews_page.ui  custom_category_page.ui  entertainmentnews_page.ui  healthnews_page.ui  sciencenews_page.ui  sportsnews_page.ui  technologynews_page.ui  topheadlines.ui
src/: main.rs
src/components/: categorised_news.rs  history_bucket.rs  history_row.rs  mod.rs  news_tile.rs  sidebar.rs
src/data/: sections.rs
src/gnews/: data_structures.rs  gnews_client.rs  mod.rs
src/news_api/: data_structures.rs  mod.rs  news_api_client.rs
src/newsdata/: datap_structures.rs  mod.rs  newsdata_client.rs
src/pages/: app_window.rs  business_page.rs  businessnews_page.rs  category_page.rs  healthnews_page.rs  history_page.rs  mod.rs  news_page.rs  settings_pages.rs  top_headlines_page.rs
src/services/: mod.rs
src/services/history_service/: history.rs
src/services/news_service/: mod.rs  (+1 more)
src/tests/: gnews_tests.rs
src/types/: app_config.rs  cache.rs  mod.rs  news_article.rs  news_category.rs  news_client.rs  news_handler.rs  news_language.rs  news_source.rs  persistent_articel.rs  request_parameters.rs
src/ui_build_herlper_functions/: mod.rs
src/utils/: generator.rs  image_loader.rs  mod.rs  page_pignation.rs  time_organizer.rs
src/widgets/: blurred_image.rs  grid_news_tile.rs  headline_news_tile.rs  mod.rs  sidebar.rs
(+8 files in other folders)
