[package]
name = "frost_news"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_8"] }
async-trait = "0.1.89"
chrono = "0.4.42"
dotenv = "0.15.0"
glib = "0.21.5"
graphene = "0.1.5"
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_12"] }
pango = "0.21.5"
rand = "0.9.2"
reqwest = {version = "0.12.28", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
wiremock = "0.6.5"
#webkit6 = "0.5.0"

[build-dependencies]
glib-build-tools = "0.21.0"
